discussion/kv_engine/179286/179286_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Move the server interface classes into a new directory

Change-Id: Id839ab6df2c61328a3a9d6915806f80f83695491

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-08-31 08:38:32.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 08:54:14.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19832/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10: error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
#include "memcached/bucket_memory_manager.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19832/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19832/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48766/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/warmup.cc(27): fatal error C1083: Cannot open include file: "memcached/bucket_memory_manager.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48766/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40993/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40993/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9527/ : FAILURE

Compile error at [2022-08-31T08:44:45.535Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9527/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21075/ : FAILURE

Compile error at [2022-08-31T08:42:11.390Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21075/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9626/ : FAILURE

Compile error at [2022-08-31T08:43:44.031Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@3/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9626/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21784/ : FAILURE

Compile error at [2022-08-31T08:46:28.314Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21784/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22136/ : FAILURE

Compile error at [2022-08-31T08:53:45.442Z] ../kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22136/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22873/ : FAILURE

Compile error at [2022-08-31T08:47:36.307Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22873/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30165/ : FAILURE

Compile error at [2022-08-31T08:52:52.785Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30165/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19053/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
